# protobuf

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG  LICENSE  LICENSE.haskell-protocol-buffers  README.md  pb.hs  protobuf.cabal
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bench/: Bench.hs  Data.hs  Nested.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: package.cache  protobuf-0.3.0.0-inplace.conf
plugin/: Main.hs
src/Data/: ProtocolBuffers.hs
src/Data/Binary/Builder/: Sized.hs
src/Data/ProtocolBuffers/: Decode.hs  EmbeddedMessage.hs  Encode.hs  Internal.hs  Message.hs  Orphans.hs  Ppr.hs  Types.hs  Wire.hs
tests/: Main.hs
