name:                protobuf
version:             0.1
synopsis:            Implementation of Google Protocol Buffers.
description:
  Protocol Buffers for GHC.Generics
  .
license:             BSD3
license-file:        LICENSE
author:              Steve Severance <sseverance@alphaheavy.com>
maintainer:          Steve Severance <sseverance@alphaheavy.com>
homepage:            https://github.com/alphaHeavy/protobuf
bug-reports:         https://github.com/alphaHeavy/protobuf/issues
category:            Data, Protocol

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Data.ProtocolBuffers
    Data.ProtocolBuffers.Internal
  other-modules:
    Data.ProtocolBuffers.Decode
    Data.ProtocolBuffers.EmbeddedMessage
    Data.ProtocolBuffers.Encode
    Data.ProtocolBuffers.Types
    Data.ProtocolBuffers.Wire
  build-depends:
    base              >= 3      && < 5,
    bytestring,
    cereal,
    data-binary-ieee754,
    deepseq,
    ghc-prim,
    mtl,
    tagged,
    text,
    type-level,
    unordered-containers
  ghc-options:
    -Wall

test-suite protobuf-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 3      && < 5,
    ghc-prim,
    bytestring,
    cereal,
    hex,
    mtl,
    protobuf,
    tagged,
    text,
    type-level,
    unordered-containers,
    test-framework             >= 0.4,
    test-framework-hunit       >= 0.2.6,
    test-framework-quickcheck2 >= 0.2.10,
    HUnit                      >= 1.2.2.3,
    QuickCheck                 >= 2.4.0.1

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/protobuf.git
