name:                protobuf
version:             0.1
synopsis:            Implementation of Google Protocol Buffers.
description:
  Protocol Buffers for GHC.Generics
  .
license:             BSD3
license-file:        LICENSE
author:              Steve Severance, Nathan Howell
maintainer:          sseverance@alphaheavy.com, nhowell@alphaheavy.com
homepage:            https://github.com/alphaHeavy/protobuf
bug-reports:         https://github.com/alphaHeavy/protobuf/issues
category:            Data, Protocol

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Data.ProtocolBuffers
    Data.ProtocolBuffers.Internal
  other-modules:
    Data.ProtocolBuffers.Decode
    Data.ProtocolBuffers.Encode
    Data.ProtocolBuffers.Message
    -- Data.ProtocolBuffers.Ppr
    Data.ProtocolBuffers.Types
    Data.ProtocolBuffers.Wire
  build-depends:
    base                       >= 4.5 && < 5,
    bytestring                 >= 0.9,
    cereal                     >= 0.3,
    data-binary-ieee754        >= 0.4,
    deepseq                    >= 1.1,
    ghc-prim,
    mtl                        == 2.*,
    -- pretty,
    text                       >= 0.10,
    type-level                 >= 0.2,
    unordered-containers       >= 0.2
  ghc-options:
    -Wall

executable protoc-gen-hs
  default-language:
    Haskell2010
  hs-source-dirs:
    plugin
  main-is:
    Main.hs
  build-depends:
    base                       >= 4.5 && < 5,
    bytestring,
    cereal,
    ghc-prim,
    haskell-src-exts,
    mtl,
    protobuf,
    text,
    type-level,
    unordered-containers
  ghc-options:
    -Wall

test-suite protobuf-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 4.5 && < 5,
    ghc-prim,
    bytestring,
    cereal,
    hex,
    mtl,
    protobuf,
    tagged,
    text,
    type-level,
    unordered-containers,
    test-framework             >= 0.4,
    test-framework-hunit       >= 0.2,
    test-framework-quickcheck2 >= 0.2,
    HUnit                      >= 1.2,
    QuickCheck                 >= 2.4

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/protobuf.git
