name:                protobuf
version:             0.2.1.4
synopsis:            Google Protocol Buffers via GHC.Generics
description:
  Google Protocol Buffers via GHC.Generics.
  .
  Protocol Buffers are a way of encoding structured data in an efficient yet extensible format.
  Google uses Protocol Buffers for almost all of its internal RPC protocols and file formats.
  .
  This library supports a useful subset of Google Protocol Buffers message specifications
  in a Haskell. No preprocessor or additional build steps are required for message encoding and decoding.
  .
  Record specifications are built by defining records with specially defined fields that
  capture most of the Protocol Buffers specification language.
  .
license:             BSD3
license-file:        LICENSE
extra-source-files:  LICENSE.google-protobuf, LICENSE.haskell-protocol-buffers, CHANGELOG
author:              Steve Severance, Nathan Howell
maintainer:          sseverance@alphaheavy.com, nhowell@alphaheavy.com
homepage:            https://github.com/alphaHeavy/protobuf
bug-reports:         https://github.com/alphaHeavy/protobuf/issues
category:            Data

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Data.ProtocolBuffers
    Data.ProtocolBuffers.Internal
    Data.ProtocolBuffers.Orphans
    Data.Binary.Builder.Sized
  other-modules:
    Data.ProtocolBuffers.Decode
    Data.ProtocolBuffers.Encode
    Data.ProtocolBuffers.Message
    -- Data.ProtocolBuffers.Ppr
    Data.ProtocolBuffers.Types
    Data.ProtocolBuffers.Wire
  build-depends:
    base                       >= 4.7 && < 5,
    base-orphans               >= 0.5,
    bytestring                 >= 0.9,
    binary                     >= 0.7,
    data-binary-ieee754        >= 0.4,
    deepseq                    >= 1.1,
    mtl                        == 2.*,
    -- pretty,
    text                       >= 0.10,
    unordered-containers       >= 0.2,
    semigroups                 >= 0.18
  ghc-options:
    -Wall

-- executable protoc-gen-hs
  -- default-language:
    -- Haskell2010
  -- hs-source-dirs:
    -- plugin
  -- main-is:
    -- Main.hs
  -- build-depends:
    -- base                       >= 4.7 && < 5,
    -- bytestring,
    -- cereal,
    -- ghc-prim,
    -- haskell-src-exts,
    -- mtl,
    -- protobuf,
    -- text,
    -- unordered-containers
  -- ghc-options:
    -- -Wall

test-suite protobuf-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 4.7 && < 5,
    bytestring,
    binary,
    containers,
    hex,
    mtl,
    protobuf,
    tagged,
    text,
    unordered-containers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    HUnit                      >= 1.2,
    QuickCheck                 >= 2.4


benchmark bench
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Bench.hs
  build-depends:
    base,
    criterion,
    deepseq,
    bytestring,
    binary,
    containers,
    hex,
    mtl,
    protobuf,
    tagged,
    text,
    unordered-containers

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/protobuf.git
